// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<span
  className="sc-cbDwiu edInZN"
>
  Caption
</span>
`;

exports[`Caption renders colors 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <span
    className="sc-cbDwiu edInZN"
  >
    Default color is Bulma
  </span>
  <span
    className="sc-cbDwiu ilOrUU"
    color="piccolo.100"
  >
    Piccolo
  </span>
  <span
    className="sc-cbDwiu kkLtsG"
    color="trunks.100"
  >
    Trunks
  </span>
  <span
    className="sc-cbDwiu fYvLWA"
    color="krillin.100"
  >
    Krillin
  </span>
</div>
`;

exports[`Caption renders font weights 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <span
    className="sc-cbDwiu edInZN"
  >
    Default font-weight is bold
  </span>
  <span
    className="sc-cbDwiu ksYhnE"
  >
    Font-weight is regular
  </span>
</div>
`;

exports[`Caption renders semantic tags 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <span
    className="sc-cbDwiu edInZN"
  >
    Span is a default tag
  </span>
  <p
    className="sc-cbDwiu edInZN"
  >
    Paragraph tag
  </p>
  <label
    className="sc-cbDwiu edInZN"
  >
    Label tag
  </label>
</div>
`;

exports[`Caption renders sizes 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <span
    className="sc-cbDwiu edInZN"
  >
    Default font-size is 10px
  </span>
  <span
    className="sc-cbDwiu jVeFjU"
    size={9}
  >
    Size is 9px
  </span>
</div>
`;

exports[`Caption renders text-align 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <span
    className="sc-cbDwiu edInZN"
  >
    Text-align is not specified
  </span>
  <span
    className="sc-cbDwiu ijCunG"
  >
    Centered text
  </span>
  <span
    className="sc-cbDwiu gNKDfB"
  >
    Right alignment
  </span>
</div>
`;
